--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,7 +18,7 @@ status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: the91end.github.io
-  baseUrl: /adins-status/
+  baseUrl: /adins-status
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Ad-Ins Status Website
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
